--- a/Sheetal_Academy.html
+++ b/Sheetal_Academy.html
@@ -54,11 +54,10 @@
                 Courses
             </button>
             <ul class="dropdown-menu dropdown-menu-dark" aria-labelledby="dropdownMenuButton2">
-              <li><a class="dropdown-item active" href="#">Action</a></li>
-              <li><a class="dropdown-item" href="#">Another action</a></li>
-              <li><a class="dropdown-item" href="#">Something else here</a></li>
-              <li><hr class="dropdown-divider"></li>
-              <li><a class="dropdown-item" href="#">Separated link</a></li>
+              <li><a class="dropdown-item active" href="#">Basic English Courses</a></li>
+              <li><a class="dropdown-item" href="#">Advance English Courses</a></li>
+              <li><a class="dropdown-item" href="#">Abacus</a></li>
+              <li><a class="dropdown-item" href="#">Summer Vacation Courses</a></li>
             </ul>
           </div>
         <a class="bar" href="#Instructors">Instructors</a>
