--- a/Sheetal_Academy.html
+++ b/Sheetal_Academy.html
@@ -61,7 +61,7 @@
             </ul>
           </div>
         <a class="bar" href="#Instructors">Instructors</a>
-        <a class="bar" href="#Blogs">Blogs</a>
+        <a class="bar" href="#Gallery">Gallery</a>
         </div></span>
 
        
