--- a/Sheetal_Academy.html
+++ b/Sheetal_Academy.html
@@ -8,7 +8,7 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
   <link rel="stylesheet" href="Sheetal.css">
-  <link rel="icon" href="sheetal_logo_1.png" type="image/x-icon">
+  <link rel="icon" href="Logo.jpg" type="image/x-icon">
   <title>NavBar</title>
 </head>
 <body>
